[package]
name = "prime_factor"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num = "0.4.0"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-traits = "0.2.15"
log = "0.4.17"
pretty_env_logger = "0.4.0"
num_cpus = "1.13.1"
indicatif = "0.17.0"
